fix the dark mode persistance by using local storage

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ nav {
 
 .search-group {
     display: flex;
-    border: 2px solid lightgrey;
+    border: 1px solid #64748B;
     border-radius: 10px;
     padding: 0.2rem 0.5rem;
 
@@ -64,13 +64,14 @@ nav {
 }
 
 .search-group input:focus {
-    border-color: lightgrey;
+    border-color: blue;
+    outline: skyblue;
 }
 
 .search-group button {
     height: 2rem;
     border: none;
-    color: lightgrey;
+    color: #64748B;
     display: flex;
     justify-content: center;
     align-items: center;
